--- a/.phrase.yml
+++ b/.phrase.yml
@@ -1,27 +1,27 @@
 phrase:
-  project_id: 61b49556733b0ed52699587486214940
+  project_id: daec31f3d59d8f0bf5c9fd80b48e6c4b
   push:
     sources:
-    - file: ./source-locale/main/json-files/test.json
+    - file: ./source-locale/main/android-strings/strings.xml
       params:
-        file_format: simple_json
+        file_format: xml
         locale_id: en
         update_translations: true
   pull:
     targets:
-    - file: ./translation-files/de/test.json
+    - file: ./translation-files/de/strings.xml
       params:
         locale_id: de
-        file_format: simple_json
-    - file: ./translation-files/es/test.json
+        file_format: xml
+    - file: ./translation-files/es/strings.xml
       params:
         locale_id: es
-        file_format: simple_json
-    - file: ./translation-files/el/test.json
+        file_format: xml
+    - file: ./translation-files/el/strings.xml
       params:
         locale_id: el
-        file_format: simple_json
-    - file: ./source-locale/main/json-files/test.json
+        file_format: xml
+    - file: ./source-locale/main/android-strings/strings.xml
       params:
         locale_id: en
-        file_format: simple_json
+        file_format: xml
