--- a/.phrase.yml
+++ b/.phrase.yml
@@ -7,21 +7,26 @@ phrase:
         file_format: xml
         locale_id: en
         update_translations: true
+        tags: strings.xml, Base-Strings
   pull:
     targets:
     - file: ./translation-files/de/strings.xml
       params:
         locale_id: de
         file_format: xml
+        tags: strings.xml, Base-Strings
     - file: ./translation-files/es/strings.xml
       params:
         locale_id: es
         file_format: xml
+        tags: strings.xml, Base-Strings
     - file: ./translation-files/el/strings.xml
       params:
         locale_id: el
         file_format: xml
+        tags: strings.xml, Base-Strings
     - file: ./source-locale/main/android-strings/strings.xml
       params:
         locale_id: en
         file_format: xml
+        tags: strings.xml, Base-Strings
